--- a/templates/html/index.tmpl.html
+++ b/templates/html/index.tmpl.html
@@ -68,17 +68,19 @@
                         <span class="help-block">Для служебных устройств - служебный номер подразделения</span>
                     </div>
                 </div>
-                <div class="form-group">
+
+            </div>
+            <div class="form-group descktop">
+                <div class="form-group recapcha">
                     <div class="g-recaptcha" data-sitekey="6Lc6STEUAAAAAFRCuy8q2LbDNknOA_DkAwaRS91b"></div>
                 </div>
-            </div>
-            <div class="form-group">
                 <a id="addNew" href="#" class="btn addNew btn-success">Добавить другое устройство
                     <div class="ripple-container"></div>
                 </a>
                 <button type="submit" disabled="disabled" id="sbm" style="background-color: #59B75C; color: white" class="btn btn-raised btn-success">Отправить заявку</button>
                 <button type="button" id="cancel" class="btn btn-default btn-danger">Удалить последнее устройство</button>
             </div>
+
 <!--
             <div class="form-group">
                 <div class="col-md-10 col-md-offset-2">
