--- a/templates/html/user.tmpl.html
+++ b/templates/html/user.tmpl.html
@@ -20,15 +20,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Kirino</a>
+                <a class="navbar-brand" href="/">WiFi СГУ</a>
             </div>
             <div class="navbar-collapse collapse navbar-responsive-collapse">
                 <ul class="nav navbar-nav">
+                    {{ if . }}
                     <li><a href="/admin/memorandums/">Memorandums</a></li>
                     <li><a href="/admin/users/">Users</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/admin/logout/">Logout</a></li>
+                    {{else}}
+                    <li><a id="tutorial" href="javascript:void(0)">Как узнать MAC-адрес</a></li>
+                    <li><a id="guide" href="javascript:void(0)">Как подключиться к WI-FI</a></li>
+                    {{end}}
                 </ul>
             </div>
         </div>
