--- a/templates/html/users.tmpl.html
+++ b/templates/html/users.tmpl.html
@@ -17,7 +17,6 @@
                     if (elements[i].options[j].getAttribute("value") == elements[i].getAttribute('data-id'))
                         elements[i].options[j].selected = true
                 }
-
             }
         }
     </script>
@@ -33,15 +32,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Kirino</a>
+                <a class="navbar-brand" href="/">WiFi СГУ</a>
             </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="navbar-collapse collapse navbar-responsive-collapse">
                 <ul class="nav navbar-nav">
+                    {{ if . }}
                     <li><a href="/admin/memorandums/">Memorandums</a></li>
                     <li><a href="/admin/users/">Users</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/admin/logout/">Logout</a></li>
+                    {{else}}
+                    <li><a id="tutorial" href="javascript:void(0)">Как узнать MAC-адрес</a></li>
+                    <li><a id="guide" href="javascript:void(0)">Как подключиться к WI-FI</a></li>
+                    {{end}}
                 </ul>
             </div>
         </div>
@@ -49,13 +53,34 @@
 
 
     <div style="width: 90%; margin: 0 auto">
-        <form action="/admin/users/search">
-            <input name="mac" placeholder="mac">
-            <input name="name" placeholder="name">
-            <input name="phone" placeholder="phone">
-            <input type="submit">
+        <form class="search_form" action="/admin/users/search">
+            <div class="form-group is-empty">
+                <input type="text" name="mac" class="form-control" placeholder="mac">
+            </div>
+            <div class="form-group is-empty">
+                <input type="text" class="form-control" name="name" placeholder="name">
+            </div>
+            <div class="form-group is-empty">
+                <input type="text" class="form-control" name="phone" placeholder="phone">
+            </div>
+            <div class="form-group is-empty">
+                {{ $departments := .Departments }}
+                <select id="qwe" data-id="qwe" class="form-control" name="department">
+                    <option disabled selected>None</option>
+                    {{range $department := $departments}}
+                    <option value="{{$department.Id}}">{{$department.Name}}</option>
+                    {{end}}
+                </select>
+            </div>
+            <input type="checkbox" id="allowed_host" name="allowed_host">
+            <label for="allowed_host"><span class="search glyphicon glyphicon-remove" aria-hidden="true">Allowed</span></label>
+            <input type="checkbox" id="denied_host" name="denied_host">
+            <label for="denied_host"><span class="search glyphicon glyphicon-remove" aria-hidden="true">Denied</span></label>
+            <input type="checkbox" id="null_memorandum" name="null_memorandum">
+            <label for="null_memorandum"><span class="search glyphicon glyphicon-remove" aria-hidden="true">No&ensp;служебка</span></label>
+            <input type="submit" style="background-color: #59B75C; color: white" class="btn btn-raised btn-success">
         </form>
-        <table class="table table-striped table-hover ">
+        <table class="table table-striped table-hover users">
             <thead>
             <tr>
                 <th>Mac</th>
@@ -98,16 +123,36 @@
                 </td>
                 <td>
                     {{if ne .Accepted 1}}
-                    <a href="/admin/users/accept/{{ .Id }}" class="btn btn-success btn-on-table"><span class="glyphicon glyphicon-ok" aria-hidden="true"></a>
+                    <a href="/admin/users/accept/{{ .Id }}"  class="btn btn-success btn-on-table hint-act">
+                        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+                        <span class="hint">Заблокировать</span>
+                    </a>
                     {{else}}
-                    <a href="/admin/users/reject/{{ .Id }}" class="btn btn-danger btn-on-table"><span class="glyphicon glyphicon-remove" aria-hidden="true"></a>
+                    <a href="/admin/users/reject/{{ .Id }}" class="btn btn-danger btn-on-table hint-act">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        <span class="hint">Разблокировать</span>
+                    </a>
                     {{end}}
                 </td>
-                <td><a href="/admin/user/edit/{{ .Id }}"  class="btn btn-primary btn-on-table"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+                <td><a href="/admin/user/edit/{{ .Id }}"  class="btn btn-primary btn-on-table hint-act">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                    <span class="hint">Редактировать</span>
+                    </a>
+                </td>
                 {{if (eq .Disabled 0)}}
-                <td><a href="/admin/users/disable/{{ .Id }}" class="btn btn-success btn-on-table"><span class="glyphicon glyphicon-list" aria-hidden="true"></span></a></td>
+                <td>
+                    <a href="/admin/users/disable/{{ .Id }}" class="btn btn-success btn-on-table hint-act">
+                        <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                        <span class="hint">Бумажная версия</span>
+                    </a>
+                </td>
                 {{else}}
-                <td><a href="/admin/users/enable/{{ .Id }}" class="btn btn-danger btn-on-table"><span class="glyphicon glyphicon-list" aria-hidden="true"></span></a></td>
+                <td>
+                    <a href="/admin/users/enable/{{ .Id }}" class="btn btn-danger btn-on-table hint-act">
+                        <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                        <span class="hint">Бумажная версия</span>
+                    </a>
+                </td>
                 {{end}}
             </tr>
             {{ end }}
