--- a/templates/html/users.tmpl.html
+++ b/templates/html/users.tmpl.html
@@ -78,7 +78,7 @@
             <label for="denied_host"><span class="search glyphicon glyphicon-remove" aria-hidden="true">Denied</span></label>
             <input type="checkbox" id="null_memorandum" name="null_memorandum">
             <label for="null_memorandum"><span class="search glyphicon glyphicon-remove" aria-hidden="true">No&ensp;служебка</span></label>
-            <input type="submit" style="background-color: #59B75C; color: white" class="btn btn-raised btn-success">
+            <input type="submit" style="background-color: #59B75C; color: white; float: right; margin-top: 27px;" class="btn btn-raised btn-success">
         </form>
         <table class="table table-striped table-hover users">
             <thead>
