fix and add forms

--- a/static/css/template.css
+++ b/static/css/template.css
@@ -275,7 +275,7 @@ td {
 #delNumb_ip{
     display: none;
 }
-#ip_numbers, #addNumb_ip{
+#ip_numbers, #addNumb_ip, #cancelEth, #cancelMail{
     display: none;
 }
 
